Spacing for long thumbnails fixed. Also Reel thumbnail page spacing fixed

--- a/src/Thumbnail.css
+++ b/src/Thumbnail.css
@@ -52,6 +52,11 @@
   opacity: 0.7;
 }
 
+.thumbnail-long-wrapper-wrapper {
+  width: 100%;
+  margin: 20px 0px 20px 0px;
+}
+
 .thumbnailimage-long{
   cursor: pointer;
   opacity: 1;
@@ -71,6 +76,10 @@
     max-width: 50%;
   }
 
+  .thumbnail-long-wrapper-wrapper {
+    margin: 10px 0px 10px 0px;
+  }
+
   .thumbnail-long-left {
     display: none;
   }
@@ -85,6 +94,10 @@
     width: 100%;
     max-width: 100%;
     margin-bottom: 5px;
+  }
+
+  .thumbnail-long-wrapper-wrapper {
+    margin: 5px 0px 5px 0px;
   }
 
   .thumb-category-wrapper {
